// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Scrollbar Tests should render horizontal scrollbar shape 1`] = `
Object {
  "lineCap": "round",
  "lineWidth": 4,
  "stroke": undefined,
  "x1": 0,
  "x2": 200,
  "y1": 2,
  "y2": 2,
  "z1": 0,
  "z2": 0,
}
`;

exports[`Scrollbar Tests should render horizontal scrollbar shape 2`] = `
Object {
  "cursor": "default",
  "lineCap": "round",
  "lineWidth": 4,
  "stroke": undefined,
  "x1": 0,
  "x2": 50,
  "y1": 2,
  "y2": 2,
  "z1": 0,
  "z2": 0,
}
`;

exports[`Scrollbar Tests should render horizontal scrollbar shape by custom theme 1`] = `
Object {
  "lineCap": "round",
  "lineWidth": 10,
  "stroke": "red",
  "x1": 0,
  "x2": 200,
  "y1": 5,
  "y2": 5,
  "z1": 0,
  "z2": 0,
}
`;

exports[`Scrollbar Tests should render horizontal scrollbar shape by custom theme 2`] = `
Object {
  "cursor": "default",
  "lineCap": "round",
  "lineWidth": 10,
  "stroke": "yellow",
  "x1": 0,
  "x2": 50,
  "y1": 5,
  "y2": 5,
  "z1": 0,
  "z2": 0,
}
`;

exports[`Scrollbar Tests should render vertical scrollbar shape 1`] = `
Object {
  "lineCap": "round",
  "lineWidth": 4,
  "stroke": undefined,
  "x1": 2,
  "x2": 2,
  "y1": 0,
  "y2": 200,
  "z1": 0,
  "z2": 0,
}
`;

exports[`Scrollbar Tests should render vertical scrollbar shape 2`] = `
Object {
  "cursor": "default",
  "lineCap": "round",
  "lineWidth": 4,
  "stroke": undefined,
  "x1": 2,
  "x2": 2,
  "y1": 0,
  "y2": 50,
  "z1": 0,
  "z2": 0,
}
`;

exports[`Scrollbar Tests should render vertical scrollbar shape by custom theme 1`] = `
Object {
  "lineCap": "round",
  "lineWidth": 2,
  "stroke": "#396",
  "x1": 1,
  "x2": 1,
  "y1": 0,
  "y2": 200,
  "z1": 0,
  "z2": 0,
}
`;

exports[`Scrollbar Tests should render vertical scrollbar shape by custom theme 2`] = `
Object {
  "cursor": "default",
  "lineCap": "round",
  "lineWidth": 2,
  "stroke": "rgba(0,0,0,.2)",
  "x1": 1,
  "x2": 1,
  "y1": 0,
  "y2": 50,
  "z1": 0,
  "z2": 0,
}
`;

exports[`Scrollbar Tests should update thumb length 1`] = `
Object {
  "lineCap": "round",
  "lineWidth": 4,
  "stroke": undefined,
  "x1": 2,
  "x2": 2,
  "y1": 0,
  "y2": 200,
  "z1": 0,
  "z2": 0,
}
`;

exports[`Scrollbar Tests should update thumb length 2`] = `
Object {
  "cursor": "default",
  "lineCap": "round",
  "lineWidth": 4,
  "stroke": undefined,
  "x1": 2,
  "x2": 2,
  "y1": 0,
  "y2": 50,
  "z1": 0,
  "z2": 0,
}
`;

exports[`Scrollbar Tests should update thumb offset 1`] = `
Object {
  "lineCap": "round",
  "lineWidth": 4,
  "stroke": undefined,
  "x1": 2,
  "x2": 2,
  "y1": 0,
  "y2": 200,
  "z1": 0,
  "z2": 0,
}
`;

exports[`Scrollbar Tests should update thumb offset 2`] = `
Object {
  "cursor": "default",
  "lineCap": "round",
  "lineWidth": 4,
  "stroke": undefined,
  "x1": 2,
  "x2": 2,
  "y1": 0,
  "y2": 50,
  "z1": 0,
  "z2": 0,
}
`;
